Fix bug social link

--- a/index.html
+++ b/index.html
@@ -90,11 +90,30 @@
                     </div>
 
                     <div class="image">
-                        <img src="./assets/img/meundies.svg" alt="meundies" />
-                        <img src="./assets/img/slack.svg" alt="slack" />
-                        <img src="./assets/img/amazon.svg" alt="amazon" />
-                        <img src="./assets/img/commerce.svg" alt="commerce" />
-                        <img src="./assets/img/sitepoint.svg" alt="sitepoint" />
+                        <a href="#!" class="img-row-two">
+                            <img
+                                src="./assets/img/meundies.svg"
+                                alt="meundies"
+                            />
+                        </a>
+                        <a href="#!" class="img-row-two">
+                            <img src="./assets/img/slack.svg" alt="slack" />
+                        </a>
+                        <a href="#!" class="img-row-two">
+                            <img src="./assets/img/amazon.svg" alt="amazon" />
+                        </a>
+                        <a href="#!" class="img-row-two">
+                            <img
+                                src="./assets/img/commerce.svg"
+                                alt="commerce"
+                            />
+                        </a>
+                        <a href="#!" class="img-row-two">
+                            <img
+                                src="./assets/img/sitepoint.svg"
+                                alt="sitepoint"
+                            />
+                        </a>
                     </div>
                 </div>
             </div>
@@ -608,10 +627,7 @@
                                     />
                                 </a>
                                 <a href="#!" class="social-link">
-                                    <img
-                                        src="./assets/img/linkek.svg"
-                                        alt=""
-                                    />
+                                    <img src="./assets/img/linkek.svg" alt="" />
                                 </a>
                             </div>
                         </div>
